--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:gridlayout-v7:25.0.1'
     compile 'com.google.android.gms:play-services:9.0+'
+    compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
 }
