--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.0+'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
