--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,25 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:gridlayout-v7:25.0.1'
-    compile 'com.google.android.gms:play-services:9.0+'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:gridlayout-v7:25.1.0'
+    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.android.support:design:25.1.0'
     testCompile 'junit:junit:4.12'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    //Firebase dependencies
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-config:10.0.1'
+    //FIreBase UI
+    compile 'com.firebaseui:firebase-ui-auth:1.0.1'
+
+//Display Images
+   compile 'com.github.bumptech.glide:glide:3.6.1'
+
 }
+apply plugin: 'com.google.gms.google-services'
