--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="API_KEY"/>
+            android:value="AIzaSyCM2iCenU1E93ewX9N7MhwQrxFd2xYbxzE"/>
 
         <activity
             android:name=".MapsActivity"
