--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,13 +65,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <receiver android:name="gameswidget.WidgetProvider" >
+        <receiver android:name="gameswidget.DetailWidgetProvider" >
             <intent-filter>
 
                 <!-- This widget provider receives broadcast with following action
     name or simply onUpdate of AppWidgetProvider is called -->
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.example.android.wesport.app.ACTION_DATA_UPDATED" />
             </intent-filter>
             <!-- linking up xml file of appwidget-provider to AppWidgetProvider -->
             <meta-data
@@ -79,7 +79,7 @@
                 android:resource="@xml/widgetinfo" />
         </receiver>
         <service
-            android:name="gameswidget.WidgetService"
+            android:name="gameswidget.DetailWidgetRemoteViewsService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
