--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCM2iCenU1E93ewX9N7MhwQrxFd2xYbxzE"/>
+            android:value="@string/google_maps_key"/>
        <activity
             android:name="com.example.android.wesport.CatalogActivity"
             android:label="@string/app_name"/>
