--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,7 @@
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
+         Google Maps Android API v2.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
@@ -52,8 +51,9 @@
             android:authorities="com.example.android.wesport"
             android:exported="false"/>
 
-        <activity android:name="com.example.android.wesport.IntroActivity"
-                  android:label="@string/app_intro" />
+        <activity
+            android:name="com.example.android.wesport.IntroActivity"
+            android:label="@string/app_intro"/>
 
         <activity
             android:name=".MapsActivity"
