updated drawbles for all densities and removed log statements

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 //noinspection GradleCompatible
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
+//noinspection GroovyMissingReturnStatement
 android {
     signingConfigs {
         release {
