--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
         <activity android:name=".MainActivity">
@@ -63,8 +62,7 @@
 
         <activity
             android:name="com.example.android.wesport.IntroActivity"
-            android:label="@string/app_intro"
-            android:screenOrientation="portrait"/>
+            android:label="@string/app_intro"/>
 
         <activity
             android:name=".MapsActivity"
