--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
     defaultConfig {
-        applicationId "com.example.android.wesport"
+        applicationId "com.my.game.wesport"
         minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
