--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.example.android.wesport">
+          package="com.my.game.wesport">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -22,7 +22,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.my.game.wesport.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -49,30 +49,30 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".CatalogActivity"
+            android:name="com.my.game.wesport.CatalogActivity"
             android:label="@string/app_name"/>
         <activity
-            android:name=".EditorActivity"
+            android:name="com.my.game.wesport.EditorActivity"
             android:theme="@style/EditorTheme"/>
 
         <provider
-            android:name=".data.GameProvider"
-            android:authorities="com.example.android.wesport"
+            android:name="com.my.game.wesport.data.GameProvider"
+            android:authorities="com.my.game.wesport"
             android:exported="false"/>
 
         <activity
-            android:name="com.example.android.wesport.IntroActivity"
+            android:name="com.my.game.wesport.IntroActivity"
             android:label="@string/app_intro"/>
 
         <activity
-            android:name=".MapsActivity"
+            android:name="com.my.game.wesport.MapsActivity"
             android:label="@string/title_activity_maps">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.wesport.MainActivity"/>
+                android:value="com.my.game.wesport.MainActivity"/>
         </activity>
-        <activity android:name=".ChatActivity"/>
-        <activity android:name=".SigninActivity"
+        <activity android:name="com.my.game.wesport.ChatActivity"/>
+        <activity android:name="com.my.game.wesport.SigninActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
