--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,8 +74,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.my.game.wesport.MainActivity"/>
         </activity>
-        <activity android:name="com.my.game.wesport.ChatActivity"/>
-        <activity android:name="com.my.game.wesport.SigninActivity"
+        <activity android:name="com.my.game.wesport.login.SigninActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -84,6 +83,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.ChatActivity"
+            android:label="@string/title_activity_chat"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+
+        <activity
+            android:name=".ui.ListUsers"/>
         <receiver android:name="gameswidget.DetailWidgetProvider">
             <intent-filter>
 
