--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,8 +90,7 @@
         </activity>
 
         <activity
-            android:name=".ui.ListUsers"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"/>
+            android:name=".ui.ListUsers"/>
         <receiver android:name="gameswidget.DetailWidgetProvider">
             <intent-filter>
 
