--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -25,14 +24,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name="com.my.game.wesport.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
                 <!-- Accepts URIs that begin with "http://games” -->
-                <data android:scheme="http"
-                      android:host="games" />
+                <data
+                    android:host="games"
+                    android:scheme="http"/>
             </intent-filter>
         </activity>
         <!--
@@ -52,36 +53,26 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name="com.my.game.wesport.CatalogActivity"
+            android:name=".CatalogActivity"
             android:label="@string/app_name"/>
-        <activity
-            android:name="com.my.game.wesport.EditorActivity"
-            android:theme="@style/EditorTheme"/>
 
         <provider
-            android:name="com.my.game.wesport.data.GameProvider"
+            android:name=".data.GameProvider"
             android:authorities="com.my.game.wesport"
             android:exported="false"/>
 
         <activity
-            android:name="com.my.game.wesport.IntroActivity"
+            android:name=".IntroActivity"
             android:label="@string/app_intro"/>
-
         <activity
-            android:name="com.my.game.wesport.MapsActivity"
-            android:label="@string/title_activity_maps">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.my.game.wesport.MainActivity"/>
-        </activity>
-        <activity android:name="com.my.game.wesport.login.SigninActivity"
-                  android:screenOrientation="portrait">
+            android:name=".login.SigninActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.ChatActivity"
             android:label="@string/title_activity_chat"
@@ -89,8 +80,6 @@
             android:windowSoftInputMode="adjustResize">
         </activity>
 
-        <activity
-            android:name=".ui.ListUsers"/>
         <receiver android:name="gameswidget.DetailWidgetProvider">
             <intent-filter>
 
@@ -111,7 +100,15 @@
             android:name="gameswidget.DetailWidgetRemoteViewsService"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
 
-
+        <activity
+            android:name=".ui.MyGames"
+            android:label="@string/title_activity_my_games"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/MyMaterialTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.my.game.wesport.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
