--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.2.0'
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     compile 'com.google.firebase:firebase-config:10.2.0'
+    compile 'com.google.firebase:firebase-invites:10.2.0'
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     //App intro library
     compile 'com.github.paolorotolo:appintro:4.1.0'
@@ -70,7 +71,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    compile 'com.firebase:geofire-android:2.1.1'
 
 
 }
