--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,8 +121,8 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
 
-                <data android:host="example.com" android:scheme="http"/>
-                <data android:host="example.com" android:scheme="https"/>
+                <data android:host="game.wesport.com" android:scheme="http"/>
+                <data android:host="game.wesport.com" android:scheme="https"/>
             </intent-filter>
         </activity>
 
