--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.my.game.wesport">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.my.game.wesport">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2.
     -->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.READ_CALENDAR"/>
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <action android:name="OPEN_HOME_ACTIVITY" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Accepts URIs that begin with "http://games” -->
                 <data
                     android:host="games"
-                    android:scheme="http"/>
+                    android:scheme="http" />
             </intent-filter>
         </activity>
         <!--
@@ -48,43 +55,44 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
+            android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".EditorActivity"
-            android:label="@string/app_name"/>
+            android:name=".GameEditActivity"
+            android:label="@string/app_name" />
 
-        <provider
+        <!--
+            <provider
             android:name=".data.GameProvider"
             android:authorities="com.my.game.wesport"
-            android:exported="false"/>
+            android:exported="false" />
+        -->
 
         <activity
             android:name=".IntroActivity"
-            android:label="@string/app_intro"/>
+            android:label="@string/app_intro" />
         <activity
             android:name=".login.SigninActivity"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.ChatActivity"
             android:label="@string/title_activity_chat"
+            android:parentActivityName=".ui.MyGames"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:parentActivityName="com.my.game.wesport.ui.MyGames">
-        </activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name="com.my.game.wesport.MapsActivity"
+            android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName="com.my.game.wesport.MainActivity">
-        </activity>
+            android:parentActivityName=".MainActivity" />
 
         <receiver android:name="gameswidget.DetailWidgetProvider">
             <intent-filter>
@@ -93,18 +101,18 @@
     This widget provider receives broadcast with following action
     name or simply onUpdate of AppWidgetProvider is called
                 -->
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
-                <action android:name="com.example.android.wesport.app.ACTION_DATA_UPDATED"/>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.example.android.wesport.app.ACTION_DATA_UPDATED" />
             </intent-filter>
             <!-- linking up xml file of appwidget-provider to AppWidgetProvider -->
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/widgetinfo"/>
+                android:resource="@xml/widgetinfo" />
         </receiver>
 
         <service
             android:name="gameswidget.DetailWidgetRemoteViewsService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
         <activity
             android:name=".ui.MyGames"
@@ -112,21 +120,47 @@
             android:theme="@style/MyMaterialTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.my.game.wesport.MapsActivity"/>
+                android:value="com.my.game.wesport.MapsActivity" />
         </activity>
-
-        <activity android:name="com.my.game.wesport.userinvites.DeepLinkActivity">
+        <activity android:name=".userinvites.DeepLinkActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:host="game.wesport.com" android:scheme="http"/>
-                <data android:host="game.wesport.com" android:scheme="https"/>
+                <data
+                    android:host="game.wesport.com"
+                    android:scheme="http" />
+                <data
+                    android:host="game.wesport.com"
+                    android:scheme="https" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UserProfileActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
 
+        <service android:name=".services.TokenService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".services.FCMMessageReceiverService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".NearbyUserActivity" />
+        <activity
+            android:name=".GroupActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".EventEditActivity" />
     </application>
 
 </manifest>
